# yag_rag

./: .env  .env.example  .gitignore  README.md  evaluation.jsonl  pyproject.toml
apps/api/: main.py  schemas.py
apps/llm/: base.py  factory.py  ollama_client.py
apps/worker/: evaluate.py  main.py
data/qdrant/: raft_state.json
data/qdrant/collections/documents/0/: newest_clocks.json  replica_state.json
data/qdrant/collections/documents/0/segments/313f510a-c7b5-462c-aa5b-38c824bd1c3a/: mutable_id_tracker.mappings  segment.json
infra/compose/: docker-compose.yml
infra/docker/: api.Dockerfile  worker.Dockerfile
